// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alignment component should render align \`center\` correctly 1`] = `
<div
  class=""
/>
`;

exports[`Alignment component should render align \`end\` correctly 1`] = `
<div
  class=""
/>
`;

exports[`Alignment component should render align \`start\` correctly 1`] = `
<div
  class=""
/>
`;

exports[`Alignment component should render content correctly 1`] = `
<div
  class=""
>
  Content
</div>
`;

exports[`Alignment component should render correctly 1`] = `
<div
  class=""
/>
`;

exports[`Alignment component should render justify \`center\` correctly 1`] = `
<div
  class="undefined"
/>
`;

exports[`Alignment component should render justify \`end\` correctly 1`] = `
<div
  class="undefined"
/>
`;

exports[`Alignment component should render justify \`space-between\` correctly 1`] = `
<div
  class="undefined"
/>
`;

exports[`Alignment component should render justify \`start\` correctly 1`] = `
<div
  class="undefined"
/>
`;
